# jpxstockdatadl

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
scripts/: jpxstockdatadl
src/jpxstockdatadl/: __init__.py  __main__.py  downloader.py  helper.py  main.py
tests/: test_downloader.py
