[project]
name = "jpxstockdatadl"
version = "0.3"
requires-python = ">=3.12"
dependencies = [
    "edinet_xbrl @ git+https://github.com/axioradev/edinet-xbrl.git",
    "lxml",
    "pydantic",
]

[project.scripts]
jpxstockdatadl = "jpxstockdatadl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jpxstockdatadl"]

[tool.hatch.metadata]
allow-direct-references = true
